# IUL

./: README.md
actuarial-calc-engine-main/actuarial-calc-engine-main/: README.md  original_plan.md  pyproject.toml  requirements.txt  setup.py
actuarial-calc-engine-main/actuarial-calc-engine-main/config/: engine_config.yaml  run_settings.yaml
actuarial-calc-engine-main/actuarial-calc-engine-main/examples/data/: generate_sample_data.py  sample_data.xlsx
actuarial-calc-engine-main/actuarial-calc-engine-main/examples/modules/: sample_product_cf_module.py
actuarial-calc-engine-main/actuarial-calc-engine-main/spec/: life_decrement_model.md  sample_product_cf.md
actuarial-calc-engine-main/actuarial-calc-engine-main/src/: __init__.py  actuarial_engine.py
actuarial-calc-engine-main/actuarial-calc-engine-main/src/calculation_layer/: engine.py
actuarial-calc-engine-main/actuarial-calc-engine-main/src/core/: base.py  config.py  exceptions.py  logging.py
actuarial-calc-engine-main/actuarial-calc-engine-main/src/input_layer/: handler.py  repository.py
actuarial-calc-engine-main/actuarial-calc-engine-main/src/libraries/: cash_flow_projection_utility.py
actuarial-calc-engine-main/actuarial-calc-engine-main/src/output_layer/: handler.py  writer.py
actuarial-calc-engine-main/actuarial-calc-engine-main/tests/: integration_test.py  test_cash_flow_utility.py  test_cli.py
actuarial-calc-engine-main/actuarial-calc-engine-main/validation/: validation.xlsx
